@@ -29,6 +29,7 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-02-02 jeu. 12:07]--[2012-02-02 jeu. 12:20] =>  0:13
      CLOCK: [2012-01-25 mer. 18:10]--[2012-01-25 mer. 18:26] =>  0:16
      CLOCK: [2012-01-25 mer. 11:46]--[2012-01-25 mer. 12:26] =>  0:40
      CLOCK: [2012-01-19 jeu. 14:01]--[2012-01-19 jeu. 14:31] =>  0:30
@@ -96,13 +97,14 @@
 	    - [X] log_reader tool print it in infos panel
 - [X] see why `make` doesn't work in src/tool
       `make MainWindow_ui.rb` correctly works but not `make`
+- [X] Test bzip2 archive for missing files
+- [ ] src/tools/test.yaml doesn't work anymore
 - [ ] Should remove autoproject generated files
       logger.cc, xmalloc.h, xmalloc.c ...
-- [ ] Test if archive correctly works (log_reader...)
+- [ ] Create a DEPENDENCIES file
 - [ ] May also handle Environment variables, config file...
       To know what level to output, configure Tty logger etc...
 - [ ] Logger may log process time
 - [ ] configure must search for boost libraries
-- [ ] Create a DEPENDENCIES file
 - [ ] Many members must be private
 - [ ] Must escape some characters (`, :)
